--- a/stable_diffusion_videos.ipynb
+++ b/stable_diffusion_videos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMDsciHN/HhWLYEdURcy00d",
+      "authorship_tag": "ABX9TyP1Q1wKco4QOFaBIr2URPtZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/nateraw/stable-diffusion-videos/blob/package-try-2/stable_diffusion_videos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/nateraw/stable-diffusion-videos/blob/main/stable_diffusion_videos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -67,8 +67,7 @@
       },
       "outputs": [],
       "source": [
-        "# ! pip install stable_diffusion_videos\n",
-        "! pip install git+https://github.com/nateraw/stable-diffusion-videos@package-try-2\n",
+        "! pip install stable_diffusion_videos\n",
         "! git config --global credential.helper store"
       ]
     },
@@ -103,16 +102,6 @@
       ],
       "metadata": {
         "id": "H7UOKJhVOonb"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Optional - Connect Google Drive\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "GjfrKeeR2NQZ"
       }
     },
     {
@@ -159,7 +148,8 @@
         "    drive.mount('/content/gdrive')"
       ],
       "metadata": {
-        "id": "kidtsR3c2P9Z"
+        "id": "kidtsR3c2P9Z",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
