Quick update to colab to install package extra

--- a/stable_diffusion_videos.ipynb
+++ b/stable_diffusion_videos.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNjri9OHPvAqDu+EWygRYwn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +66,8 @@
       },
       "outputs": [],
       "source": [
-        "! pip install stable_diffusion_videos\n",
+        "%%capture\n",
+        "! pip install stable_diffusion_videos[realesrgan]\n",
         "! git config --global credential.helper store"
       ]
     },
@@ -179,7 +179,7 @@
     {
       "cell_type": "code",
       "source": [
-        "interface.launch()"
+        "interface.launch(debug=True)"
       ],
       "metadata": {
         "id": "8es3_onUOL3J"
