--- a/stable_diffusion_videos.ipynb
+++ b/stable_diffusion_videos.ipynb
@@ -251,7 +251,7 @@
       "source": [
         "from stable_diffusion_videos import walk\n",
         "\n",
-        "video_path = walk(['a cat', 'a dog'], [42, 1337], num_steps=3, make_video=True)\n",
+        "video_path = walk(['a cat', 'a dog'], [42, 1337], num_interpolation_steps=3, make_video=True)\n",
         "visualize_video_colab(video_path)"
       ],
       "metadata": {
