Fix typo in stable_diffusion_videos.ipynb
programatically -> programmatically

--- a/stable_diffusion_videos.ipynb
+++ b/stable_diffusion_videos.ipynb
@@ -197,9 +197,9 @@
         "id": "SjTQLCiLOWeo"
       },
       "source": [
-        "## Use `walk` programatically\n",
+        "## Use `walk` programmatically\n",
         "\n",
-        "The other option is to not use the interface, and instead use `walk` programatically. Here's how you would do that..."
+        "The other option is to not use the interface, and instead use `walk` programmatically. Here's how you would do that..."
       ]
     },
     {
