--- a/flax_stable_diffusion_videos.ipynb
+++ b/flax_stable_diffusion_videos.ipynb
@@ -20,6 +20,8 @@
         "\n",
         "This notebook allows you to generate videos by interpolating the latent space of [Stable Diffusion](https://github.com/CompVis/stable-diffusion) using TPU for faster inference.\n",
         "\n",
+        "In comparison with standard Colab GPU, this runs ~6x faster after the first run. The first run is comparable to the GPU version because it compiles the code.\n",
+        "\n",
         "You can either dream up different versions of the same prompt, or morph between different text prompts (with seeds set for each for reproducibility).\n",
         "\n",
         "If you like this notebook:\n",
